appId: com.vaibhavmaddhi.versa
name: Auth Forgot Password Flow
---
- waitForAnimationToEnd:
    timeout: 10000
- tapOn:
    label: "Sign In"
    optional: true
- waitForAnimationToEnd:
    timeout: 3000
- tapOn:
    label: "Forgot Password?"
    optional: true
- waitForAnimationToEnd:
    timeout: 3000
- assertVisible:
    label: "Reset your password"
    optional: true
- assertVisible:
    label: "Send Reset Link"
    optional: true
